# MortgageFlow

./: .env  .replit  README.md  app.py  eraser_io.md  pyproject.toml  replit.md  system_architecture_diagram.md
.streamlit/: config.toml
modules/: ai_processor.py  batch_processor.py  dashboard.py  database.py  extract.py  gcp_services.py  simple_ai_processor.py  upload.py  upload_interface.py  validate.py
utils/: document_types.py  helpers.py
